--- a/main.html
+++ b/main.html
@@ -9,10 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		My current favourite song is <a>
-			<href>
-				https://www.youtube.com/watch?v=YR12Z8f1Dh8
-			</href>
+		My current favourite song is
+		<a href = "https://www.youtube.com/watch?v=YR12Z8f1Dh8" >
+			
 		</a>
 	</div>
     <script type="text/javascript" src="./script.js">
